多个业务方使用AIDL时，使用同一个Service

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -46,4 +46,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv"
         android:text="跳转到LibraryActivity"/>
+
+    <Button
+        android:id="@+id/btnBinderPool"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv"
+        android:text="跳转到BinderPoolActivity"/>
 </RelativeLayout>
