--- a/Client/src/main/res/layout/content_main.xml
+++ b/Client/src/main/res/layout/content_main.xml
@@ -51,6 +51,6 @@
         android:id="@+id/btnBinderPool"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv"
+        android:layout_below="@+id/btnJump"
         android:text="跳转到BinderPoolActivity"/>
 </RelativeLayout>
